Fix off-center pages and section header tags

--- a/assets/css/src/global/_mixins.scss
+++ b/assets/css/src/global/_mixins.scss
@@ -271,11 +271,11 @@
     border-left: 50vw solid transparent;
     border-right: 50vw solid transparent;
 
-    border-top: 2em solid color(red);
+    border-top: 3.5em solid color(red);
   }
 
   > * {
-    max-width: 40%;
+    max-width: 60%;
     background-color: transparent;
   }
 }
